[tool.poetry]
name = "lavoisier"
version = "0.1.0"
description = "A simple discord bot to fetch chemical information"
authors = ["tyrochymicus <tyler.roche@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
chemspipy = "^2.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
